[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maheen-Sheikh", email = "you@example.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
project1 = "project1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
